<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:background="@color/lightGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:padding="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/toolbar_title_secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/good_morning"
                        android:textAllCaps="true"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/TextStyle.ToolbarTitlePrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/toolbar_title_secondary"
                        android:layout_alignParentStart="true"
                        android:textStyle="bold"
                        tools:text="Your Name"
                        android:textColor="@color/primaryColor" />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_streak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_leader_beard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_gradient_color"
                android:padding="24dp">

                <TextView
                    android:id="@+id/tv_counter_streak"
                    style="@style/Text.Streak.Counter.Number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    tools:text="1st"
                    app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_subtitle"
                    style="@style/Text.Streak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/your_current_position"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/iv_trophy"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_trophy_gold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/view_loading"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:alpha="0"
                    android:background="@color/transparant"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.github.ybq.android.spinkit.SpinKitView
                        android:id="@+id/spin_kit"
                        style="@style/SpinKitView.Large.Wave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:SpinKit_Color="@color/primaryColor" />
                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_streak">

            <LinearLayout
                android:id="@+id/card_habit_in_progress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/card_progress_radius"
                android:orientation="vertical"
                android:padding="18dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fire"
                    app:tint="@color/accentColor" />

                <TextView
                    android:id="@+id/tv_calories_burn"
                    android:textSize="26sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100kkal" />

                <TextView
                    style="@style/Text.Card.Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories_burn" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_total_habit_completed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/card_progress_radius"
                android:orientation="vertical"
                android:padding="18dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check"
                    app:tint="@color/primaryColor" />

                <TextView
                    android:id="@+id/tv_total_completed"
                    style="@style/Text.Card.Suffix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10x" />

                <TextView
                    style="@style/Text.Card.Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_has_been_play" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/calendar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/card_progress_radius"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp"
            
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/calendar_month_year"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="May 2022"
                android:textAlignment="center"
                android:textStyle="bold" />

            <include
                android:id="@+id/legend_layout"
                layout="@layout/calendar_day_legend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp" />

            <com.kizitonwose.calendarview.CalendarView
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cv_dayViewResource="@layout/calendar_day_layout"
                app:cv_inDateStyle="allMonths"
                app:cv_orientation="horizontal"
                app:cv_outDateStyle="endOfRow"
                app:cv_scrollMode="paged" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/activities"
                        android:src="@drawable/selected_date_background"/>

                    <TextView
                        style="@style/Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activities"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>